--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+/.idea/langchaintestapp.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
